--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,18 @@
 .news img{
     margin: 0 auto;
 }
+.embed-responsive{
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%; /* نسبت 16:9 */
+    overflow: hidden;
+}
+.nc-SingleContent iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+}
