--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: 'IRANSansWeb';
+    src: url('../fonts/fa/IRANSansWeb(FaNum).woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.priceFont {
+    font-family: 'IRANSansWeb', sans-serif;
+}
+
 .news img{
     margin: 0 auto;
 }
@@ -30,7 +41,7 @@ body {
   height: 100%;
 }
 
- 
+
 
 .swiper {
   width: 100%;
