--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,28 +9,28 @@
     font-style: normal;
 }
 
-/* width */
-::-webkit-scrollbar {
-    width: 5px;
-    direction: ltr;
-}
+/*!* width *!*/
+/*::-webkit-scrollbar {*/
+/*    width: 5px;*/
+/*    direction: ltr;*/
+/*}*/
 
-/* Track */
-::-webkit-scrollbar-track {
-    background: #fefefe;
-    border-radius: 5px;
-}
+/*!* Track *!*/
+/*::-webkit-scrollbar-track {*/
+/*    background: #fefefe;*/
+/*    border-radius: 5px;*/
+/*}*/
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: #0f172a;
-    border-radius: 5px;
-}
+/*!* Handle *!*/
+/*::-webkit-scrollbar-thumb {*/
+/*    background: #0f172a;*/
+/*    border-radius: 5px;*/
+/*}*/
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: #0f172a;
-}
+/*!* Handle on hover *!*/
+/*::-webkit-scrollbar-thumb:hover {*/
+/*    background: #0f172a;*/
+/*}*/
 
 
 .priceFont {
