--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,17 +37,19 @@
     font-family: 'IRANSansWeb', sans-serif;
 }
 
-.news img{
+.news img {
     margin: 0 auto;
 }
-.embed-responsive{
+
+.embed-responsive {
     position: relative;
     width: 100%;
     height: 0;
     padding-bottom: 56.25%; /* نسبت 16:9 */
     overflow: hidden;
 }
-.nc-SingleContent iframe{
+
+.nc-SingleContent iframe {
     position: absolute;
     top: 0;
     left: 0;
@@ -57,14 +59,15 @@
 }
 
 
+#app {
+    height: 100%
+}
 
-#app { height: 100% }
 html,
 body {
     position: relative;
     height: 100%;
 }
-
 
 
 .swiper {
@@ -85,10 +88,19 @@ body {
     width: 100%;
 }
 
-.rmdp-container{
+.rmdp-container {
     width: 100%;
 }
+
 .description * {
     font-family: myFont, myFont Fallback !important;
 
+}
+
+
+.html_description figure {
+    width: 100% !important;
+}
+.html_description figure img{
+    width: 100% !important;
 }
